fixed mobile overlap in contact page

--- a/src/Components/h2.module.scss
+++ b/src/Components/h2.module.scss
@@ -1,6 +1,6 @@
 
 .h2{text-align: start;
-    height: 10vh;
+    min-height: 10vh;
     font-size: 3rem;
     font-weight: 400;
     margin:5vh 5% 5vh 5%;
